<resources>
    <string name="app_name">JajMeUp</string>
    <string name="title_reveil">Réveil</string>
    <string name="title_caummunaute">Communauté</string>
    <string name="title_historique">Historique</string>
    <string name="title_activity_settings">Paramètres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Valeur par défault des text view qui changeront en fonction de la base de données-->
    <string name="hidden_username_string">Username</string>
    <string name="hidden_message_string">Message</string>
    <string name="hidden_youtube_link_string">Lien YouTube</string>
    <string name="hidden_isfriend_search_string">false</string>
    <string name="hidden_isfriend_true_search_string">true</string>

    <!-- Différent label -->
    <string name="label_password_string">Mot de passe :</string>
    <string name="label_old_password_string">Ancien mot de passe :</string>
    <string name="label_new_password_string">Nouveau mot de passe :</string>
    <string name="label_confirm_string">Confirmer :</string>
    <string name="label_header_world_list_community_string">Tout le monde</string>
    <string name="label_header_friends_list_community_string">Amis</string>
    <string name="label_confirm_password_delete_account_string">Confirmes ton mot de passe pour supprimer ton compte</string>
    <string name="label_youtube_link_string">Lien Youtube</string>
    <string name="label_write_message_string">Écrit un message pour</string>
    <string name="label_state_on_clock_list_user_string">A mis un réveil !</string>
    <string name="label_state_off_clock_list_user_string">N\'a pas mis de réveil</string>
    <string name="label_default_alarm_change_string">Choisis ton réveil par défault</string>

    <!-- Différent hint -->
    <string name="hint_password_string">Mot de passe</string>
    <string name="hint_mail_string">Courriel</string>
    <string name="hint_pseudo_string">Pseudo</string>
    <string name="hint_youtube_link_string">Lien Youtube</string>
    <string name="hint_message_string">Message</string>

    <!-- Boutton -->
    <string name="button_accept_string">Accepter</string>
    <string name="button_refuse_string">Refuser</string>
    <string name="button_cancel_string">Annuler</string>
    <string name="button_ask_friend_string">Demander en ami</string>
    <string name="button_change_string">Changer</string>
    <string name="button_connect_string">Connexion</string>
    <string name="button_forget_password_string">Mot de passe oublié</string>
    <string name="button_register_string">Inscription</string>
    <string name="button_delete_string">Supprimer</string>
    <string name="button_wake_up_string">JajMeUp!</string>
    <string name="button_ok_string">OK</string>
    <string name="button_answer_string">Réponds lui</string>
    <string name="button_stop_string">Arrêt</string>

    <!-- Description -->
    <string name="description_img_string">Photo de profil</string>
    <string name="description_img_header_string">Dès</string>

    <!-- Badge -->
    <string name="badge_default_number_string">0</string>

    <!-- YoutubeJAJActivity -->
    <string name="qui_m_a_reveille">Tu as été réveillé par </string>

    <!-- LastAlarmActivity -->
    <string name="lastAlarmText">C\'est ton beau réveil de secours</string>

    <!-- Community Fragment -->
    <string name="quelle_video">Avec cette vidéo :
    </string>

    <!-- Information divers -->
    <string name="courriel_envoye">Un courriel vient d\'être envoyé</string>
    <string name="ajout_photo">Ajoutes une photo!</string>
    <string name="vote_pour">Tu as voté pour </string>
    <string name="copie_presse_papier">Lien copié importé !</string>
    <string name="partage_recupere">Lien partagé importé !</string>
    <string name="no_alarm">Pas de réveil</string>
    <string name="alarm_in">Réveil dans</string>
    <string name="alarm_less_minute">Réveil dans moins d\'une minute</string>

    <!-- Message Erreur -->
    <string name="erreur_internet">Pas de connexion internet!</string>
    <string name="erreur_identification">Erreur lors de la connexion</string>
    <string name="courriel_introuvable">Compte non trouvé</string>
    <string name="courriel_incorrect">Format du courriel incorrect</string>
    <string name="pseudo_incorrect">Pseudo incorrect</string>
    <string name="mot_de_passe_differents">Mot de passe différents</string>
    <string name="erreur_inscription">Erreur lors de l\'inscription</string>
    <string name="lien_yt_invalide">Lien YouTube invalide</string>
    <string name="erreur_user_existe">Pseudo déjà utilisé</string>
    <string name="erreur_mail_existe">Adresse courriel déjà utilisée</string>
</resources>
