<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popup_drawable"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/label_default_alarm_change_string"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />
    <EditText
        android:id="@+id/youtube_link_default_alarm"
        android:textIsSelectable="true"
        android:cursorVisible="true"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_youtube_link_string"/>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
        <Button
            android:id="@+id/button_change_default_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:textColor="@android:color/white"
            android:text="@string/button_ok_string"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_closepop_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp"
            android:text="@string/button_cancel_string"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
</LinearLayout>