<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popup_drawable"
    android:padding="20dp"
    >
    <ImageView
        android:id="@+id/removefriend_profile_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="2pt"
        tools:src="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/description_img_string"/>
    <TextView
        android:id="@+id/removefriend_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hidden_username_string"
        android:textColor="@android:color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >
        <Button
            android:id="@+id/button_removefriendpop"
            android:background="@drawable/button_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/button_delete_string"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/button_removefriend_closepop"
            android:background="@drawable/button_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/button_cancel_string"
            android:textColor="@android:color/white"
            style="?android:attr/buttonBarButtonStyle"/>
    </TableRow>
</LinearLayout>